--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <header>
             <img src="logo.svg" alt="Bookflix" class="logo">
+            <p class="header-subtitle">Регулярно читаем книги на английском и прокачиваем словарный запас</p>
         </header>
 
         <main>
@@ -18,7 +19,8 @@
             <div id="bookSection" class="content-section active">
                 <div class="book-hero">
                     <img id="bookImage" src="book-of-month.png" alt="Книга месяца" class="book-cover">
-                    <h1 id="bookTitle" class="book-title-main">Загрузка...</h1>
+                    <h1 id="bookTitle" class="book-title-main">The Twelve Days of Christmas</h1>
+                    <p class="book-badge">Книга месяца</p>
                     <div class="book-meta">
                         <span id="bookAuthor" class="meta-item">Загрузка...</span>
                         <span class="meta-separator">•</span>
@@ -29,38 +31,34 @@
                     
                     <div class="book-actions">
                         <button class="action-icon-btn" id="purchaseBtn" title="Купить подписку">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M6 7V6a6 6 0 0 1 12 0v1"/>
                                 <path d="M3 7h18l-1.5 14H4.5L3 7z"/>
                             </svg>
+                            <span>Купить подписку</span>
                         </button>
                         <button class="action-icon-btn" id="shareBtn" title="Поделиться">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <circle cx="18" cy="5" r="3"/>
                                 <circle cx="6" cy="12" r="3"/>
                                 <circle cx="18" cy="19" r="3"/>
                                 <line x1="8.6" y1="11" x2="15.4" y2="7"/>
                                 <line x1="8.6" y1="13" x2="15.4" y2="17"/>
                             </svg>
+                            <span>Поделиться</span>
                         </button>
                         <button class="action-icon-btn" id="readBtn" title="Читать">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M2 4h8l2 3 2-3h8v16h-8l-2-3-2 3H2z"/>
                             </svg>
+                            <span>Читать</span>
                         </button>
                     </div>
                 </div>
 
-                <div class="expandable-section">
-                    <button class="expand-btn" onclick="toggleBookDescription()">
-                        <span>О чём книга</span>
-                        <svg class="expand-icon" id="bookExpandIcon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <polyline points="6 9 12 15 18 9"/>
-                        </svg>
-                    </button>
-                    <div class="expandable-content" id="bookDescription">
-                        <p id="bookDescriptionText">Загрузка...</p>
-                    </div>
+                <div class="book-description-preview collapsed" id="bookDescription">
+                    <p id="bookDescriptionText">Загрузка...</p>
+                    <div class="fade-mask"></div>
                 </div>
             </div>
 
@@ -121,17 +119,17 @@
                 <span>Подписка</span>
             </button>
             <button class="tab-item" data-tab="magazine">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M4 19h16M4 5h16v10H4z"/>
-                    <path d="M12 5v10"/>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+                    <rect x="3" y="4" width="18" height="16" rx="2"/>
+                    <line x1="3" y1="10" x2="21" y2="10"/>
                 </svg>
-                <span>Журнал</span>
+                <span>Магазин</span>
             </button>
             <button class="tab-item" data-tab="readingRoom" id="readingRoomTabBtn">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M2 4h8l2 3 2-3h8v16h-8l-2-3-2 3H2z"/>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+                    <path d="M4 4h16v12H7l-3 3v-3z"/>
                 </svg>
-                <span>Reading Room</span>
+                <span>Поддержка</span>
             </button>
         </nav>
 
