--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
                 <div class="book-hero">
                     <img id="bookImage" src="book-of-month.png" alt="Книга месяца" class="book-cover">
                     <h1 id="bookTitle" class="book-title-main">The Twelve Days of Christmas</h1>
-                    <p class="book-badge">Книга месяца</p>
                     <div class="book-meta">
-                        <span id="bookAuthor" class="meta-item">Загрузка...</span>
-                        <span id="bookDate" class="meta-item">Декабрь 2025</span>
-                        <span id="bookPages" class="meta-item">320 стр.</span>
+                        <span class="book-badge">Книга месяца</span>
+                        <span id="bookAuthor" class="meta-author">Загрузка...</span>
+                        <span class="meta-publish">Публикация: <span id="bookDate">Декабрь 2025</span> • <span id="bookPages">320 стр.</span></span>
                     </div>
                     
                     <div class="book-actions">
