--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <div id="bookSection" class="content-section active">
                 <div class="book-hero">
                     <img id="bookImage" src="book-of-month.png" alt="Книга месяца" class="book-cover">
-                    <h1 id="bookTitle" class="book-title-main">The Twelve Days of Christmas</h1>
+                    <h1 id="bookTitle" class="book-title-main">Loading...</h1>
                     <div class="book-meta">
                         <span class="book-badge">Книга месяца</span>
                         <span id="bookAuthor" class="meta-author">Загрузка...</span>
-                        <span class="meta-publish">Публикация: <span id="bookDate">Декабрь 2025</span> • <span id="bookPages">320 стр.</span></span>
+                        <span class="meta-publish">Публикация: <span id="bookDate">—</span> • <span id="bookPages">—</span></span>
                     </div>
                     
                     <div class="book-actions">
@@ -55,6 +55,7 @@
                 <div class="book-description-preview collapsed" id="bookDescription">
                     <p id="bookDescriptionText">Загрузка...</p>
                     <div class="fade-mask"></div>
+                    <button type="button" class="description-toggle" id="bookDescriptionToggle">Читать дальше</button>
                 </div>
             </div>
 
