--- a/subscription.html
+++ b/subscription.html
@@ -13,6 +13,7 @@
             <img src="logo.svg" alt="Bookflix" class="subscription-logo">
             <div class="subscription-user">
                 <div class="user-avatar" id="subscriptionAvatar"></div>
+                <div class="subscription-username" id="subscriptionName"></div>
             </div>
         </header>
 
